# simrail-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi_upload.yml  tests.yml
python/: pyproject.toml
python/src/simrail_sdk/: base.py  enums.py  line_sections.py  line_speeds.json  line_speeds.py  operational_warnings.py  servers.py  stations.py
python/tests/: test_line_sections.py
src/simrail_sdk/: base.py  enums.py  stations.py
src/tests/: test_stations.py
