[tool.poetry]
name = "simrail-sdk"
version = "0.1.1"
description = "Unofficial Software Development Toolkit for SimRail - The Railway Simulator"
authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simrail_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
simpleregistry = "^0.2.0"
pydantic = "^2.8.2"
flask-babel = "^4.0.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
